--- a/app-text/yelp-tools/ChangeLog
+++ b/app-text/yelp-tools/ChangeLog
@@ -1,197 +1,145 @@
 # ChangeLog for app-text/yelp-tools
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/yelp-tools/ChangeLog,v 1.54 2014/08/07 17:55:20 jer Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> yelp-tools-3.12.1.ebuild:
-  Stable for HPPA (bug #512012).
+*yelp-tools-3.16.1 (09 Aug 2015)
+*yelp-tools-3.14.1 (09 Aug 2015)
+*yelp-tools-3.12.1 (09 Aug 2015)
 
-  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.12.1.ebuild:
-  Stable for ppc, wrt bug #512012
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
+  +yelp-tools-3.12.1.ebuild, +yelp-tools-3.14.1.ebuild,
+  +yelp-tools-3.16.1.ebuild:
+  proj/gentoo: Initial commit
 
-  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.12.1.ebuild:
-  Stable for x86, wrt bug #512012
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.12.1.ebuild:
-  Stable for amd64, wrt bug #512912
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-*yelp-tools-3.12.1 (27 Apr 2014)
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org>
-  +yelp-tools-3.12.1.ebuild:
-  Version bump for Gnome 3.12.
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  23 Apr 2014; Pacho Ramos <pacho@gentoo.org> -yelp-tools-3.6.1.ebuild:
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
+
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
+
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> yelp-tools-3.12.1.ebuild,
+  yelp-tools-3.14.1.ebuild, yelp-tools-3.16.1.ebuild:
+  Convert URIs for gnome.org and kde.org to https
+
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
+
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
+
+  Bug: https://bugs.gentoo.org/552720
+
+  07 Sep 2015; Mikle Kolyada <zlogene@gentoo.org> yelp-tools-3.16.1.ebuild:
+  amd64 stable wrt bug #551826
+
+  Package-Manager: portage-2.2.20.1
+
+  12 Sep 2015; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.16.1.ebuild:
+  x86 stable wrt bug #551826
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
+
+  16 Sep 2015; Tobias Klausmann <klausman@gentoo.org>
+  yelp-tools-3.16.1.ebuild:
+  add alpha keyword
+
+  Gentoo-Bug: 551826
+
+  Package-Manager: portage-2.2.20.1
+
+  20 Sep 2015; Jeroen Roovers <jer@gentoo.org> yelp-tools-3.16.1.ebuild:
+  gentoo/app-text/yelp-tools: Stable for HPPA (bug #551826).
+
+  Package-Manager: portage-2.2.20.1
+
+  28 Sep 2015; Jeroen Roovers <jer@gentoo.org> yelp-tools-3.16.1.ebuild:
+  Stable for PPC64 (bug #551826).
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
+
+  03 Oct 2015; Markus Meier <maekke@gentoo.org> yelp-tools-3.16.1.ebuild:
+  arm stable, bug #551826
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="arm"
+
+  18 Oct 2015; Mikle Kolyada <zlogene@gentoo.org> yelp-tools-3.16.1.ebuild:
+  sparc stable wrt bug #551826
+
+  Package-Manager: portage-2.2.20.1
+
+  12 Nov 2015; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.16.1.ebuild:
+  ppc stable wrt bug #565086
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc"
+
+*yelp-tools-3.18.0 (14 Nov 2015)
+
+  14 Nov 2015; Pacho Ramos <pacho@gentoo.org> +yelp-tools-3.18.0.ebuild:
+  Version bump
+
+  Package-Manager: portage-2.2.24
+
+  14 Nov 2015; Pacho Ramos <pacho@gentoo.org> -yelp-tools-3.12.1.ebuild:
   Drop old
 
-  21 Apr 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Stable for arm, wrt bug #507568
+  Package-Manager: portage-2.2.24
 
-  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Stable for sparc, wrt bug #507568
+  16 Nov 2015; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.16.1.ebuild:
+  ia64 stable wrt bug #565086
 
-  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Stable for alpha, wrt bug #507568
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
 
-  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Stable for ia64, wrt bug #507568
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Stable for ppc64, wrt bug #507568
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  14 Apr 2014; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Stable for ppc, wrt bug #507568
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Stable for HPPA (bug #499954).
+  21 Feb 2016; Pacho Ramos <pacho@gentoo.org> yelp-tools-3.18.0.ebuild:
+  amd64 stable, bug 566378
 
-  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> yelp-tools-3.10.0.ebuild:
-  x86 stable, bug 499954
+  Package-Manager: portage-2.2.27
+  RepoMan-Options: --include-arches="amd64"
 
-  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> yelp-tools-3.10.0.ebuild:
-  amd64 stable, bug 499954
-
-  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> yelp-tools-3.10.0.ebuild:
-  Fix wrong commit, bug 502160
-
-  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> yelp-tools-3.10.0.ebuild:
-  arch stable, bug 888
-
-  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> yelp-tools-3.10.0.ebuild,
-  yelp-tools-3.6.1.ebuild:
-  Add s390 love #469982.
-
-  15 Jan 2014; Sébastien Fabbro <bicatali@gentoo.org> yelp-tools-3.10.0.ebuild,
-  yelp-tools-3.6.1.ebuild:
-  Keyworded amd64-linux
-
-  14 Jan 2014; Anthony G. Basile <blueness@gentoo.org> yelp-tools-3.10.0.ebuild,
-  yelp-tools-3.6.1.ebuild:
-  Keyword ~mips
-
-*yelp-tools-3.10.0 (24 Dec 2013)
-
-  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +yelp-tools-3.10.0.ebuild,
-  -yelp-tools-3.4.1.ebuild:
-  Version bump for Gnome 3.10, drop old
-
-  29 Aug 2013; Jeroen Roovers <jer@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for HPPA (bug #482886).
-
-  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for sparc, wrt bug #458984
-
-  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for alpha, wrt bug #458984
-
-  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for ia64, wrt bug #458984
-
-  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for arm, wrt bug #458984
-
-  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for ppc64, wrt bug #458984
-
-  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for ppc, wrt bug #458984
-
-  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for x86, wrt bug #458984
-
-  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Stable for amd64, wrt bug #458984
-
-  25 Feb 2013; Zac Medico <zmedico@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Add ~arm-linux and ~x86-linux keywords.
-
-  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Add ~sh, wrt bug #449220
-
-  06 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
-  yelp-tools-3.4.1.ebuild, yelp-tools-3.6.1.ebuild:
-  Switch to virtual/awk since it has been keyworded.
-
-  06 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
-  yelp-tools-3.4.1.ebuild, yelp-tools-3.6.1.ebuild,
-  -yelp-tools-3.6.1-r1.ebuild, -files/yelp-tools-3.6.1-gawk.patch:
-  Undo previous commit: yelp-tools works with all virtual/awk implementations
-  except for nawk, which is buggy (see bug #455786). However, the ebuild
-  cannot switch to virtual/awk until it's keyworded on amd64-fbsd.
-
-*yelp-tools-3.6.1-r1 (06 Feb 2013)
-
-  06 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
-  yelp-tools-3.4.1.ebuild, yelp-tools-3.6.1.ebuild,
-  +yelp-tools-3.6.1-r1.ebuild, +files/yelp-tools-3.6.1-gawk.patch:
-  Require gawk, not generic awk; e.g. nawk reports syntax errors in yelp-tools
-  awk scripts (bug #455656, thanks to Christoph Junghans).
-
-  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> yelp-tools-3.6.1.ebuild:
-  keyword ~amd64-fbsd
-
-  06 Jan 2013; Markus Meier <maekke@gentoo.org> yelp-tools-3.6.1.ebuild:
-  add ~arm, bug #449220
-
-  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Add ~sparc, wrt bug #449220
-
-  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Add ~alpha, wrt bug #449220
-
-  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Add ~ia64, wrt bug #449220
-
-  19 Dec 2012; Jeroen Roovers <jer@gentoo.org> yelp-tools-3.4.1.ebuild,
-  yelp-tools-3.6.1.ebuild:
-  Marked ~hppa (bug #447432).
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Add ~ppc, wrt bug #447432
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.6.1.ebuild:
-  Add ~ppc64, wrt bug #447432
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.4.1.ebuild:
-  Add ~ppc64, wrt bug #447432
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.4.1.ebuild:
-  Add ~ppc, wrt bug #447432
-
-*yelp-tools-3.6.1 (16 Dec 2012)
-
-  16 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  -yelp-tools-3.2.1.ebuild, yelp-tools-3.4.1.ebuild, +yelp-tools-3.6.1.ebuild:
-  Version bump for gnome-3.6 with some yelp-check improvements. Update license.
-  Drop old.
-
-  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.4.1.ebuild:
-  Stable for amd64, wrt bug #427544
-
-  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> yelp-tools-3.4.1.ebuild:
-  x86 stable wrt bug #427544
-
-*yelp-tools-3.4.1 (06 May 2012)
-
-  06 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  +yelp-tools-3.4.1.ebuild:
-  Version bump, fixes potential 'Argument list too long' errors and adds check
-  for broken links.
-
-  04 May 2012; Jeff Horelick <jdhore@gentoo.org> yelp-tools-3.2.1.ebuild:
-  dev-util/pkgconfig -> virtual/pkgconfig
-
-  29 Apr 2012; Markus Meier <maekke@gentoo.org> yelp-tools-3.2.1.ebuild:
-  x86 stable, bug #410611
-
-  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.2.1.ebuild:
-  Stable for amd64, wrt bug #410611
-
-  13 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
-  yelp-tools-3.2.1.ebuild:
-  Fix LICENSE (yelp.m4 is GPL2 or freedist).
-
-*yelp-tools-3.2.1 (04 Nov 2011)
-
-  04 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
-  +yelp-tools-3.2.1.ebuild, +metadata.xml:
-  Add new gnome-3.2 documentation build tools from the gnome overlay.
