--- a/dev-cpp/gflags/ChangeLog
+++ b/dev-cpp/gflags/ChangeLog
@@ -1,88 +1,74 @@
 # ChangeLog for dev-cpp/gflags
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.19 2012/12/16 14:11:07 pacho Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  16 Dec 2012; Pacho Ramos <pacho@gentoo.org> -gflags-1.7.ebuild, metadata.xml:
-  Drop maintainer due retirement, #95685
+*gflags-9999 (09 Aug 2015)
+*gflags-2.1.2 (09 Aug 2015)
+*gflags-2.1.1-r1 (09 Aug 2015)
 
-  19 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> gflags-2.0.ebuild:
-  Keyworded ~amd64-linux and ~x86-linux
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +files/gflags-2.1.1-libs.patch, +gflags-2.1.1-r1.ebuild,
+  +gflags-2.1.2.ebuild, +gflags-9999.ebuild, +metadata.xml:
+  proj/gentoo: Initial commit
 
-  03 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.5.ebuild,
-  -gflags-1.6.ebuild:
-  Remove old versions.
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  16 Feb 2012; Mike Frysinger <vapier@gentoo.org> gflags-1.5.ebuild,
-  gflags-1.6.ebuild, gflags-1.7.ebuild, gflags-2.0.ebuild:
-  Touch up style -- no functional changes.
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-*gflags-2.0 (16 Feb 2012)
-*gflags-1.7 (16 Feb 2012)
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  16 Feb 2012; Krzysztof Pawlik <nelchael@gentoo.org> +gflags-1.7.ebuild,
-  +gflags-2.0.ebuild:
-  Version bumps.
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  11 Nov 2011; Mike Frysinger <vapier@gentoo.org> gflags-1.5.ebuild,
-  gflags-1.6.ebuild:
-  Add arm love.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-*gflags-1.6 (01 Sep 2011)
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  01 Sep 2011; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.4.ebuild,
-  +gflags-1.6.ebuild:
-  Version bump.
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*gflags-1.5 (12 Feb 2011)
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> gflags-2.1.1-r1.ebuild,
+  gflags-2.1.2.ebuild, gflags-9999.ebuild:
+  Enable https for all google URIs
 
-  12 Feb 2011; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.2.ebuild,
-  +gflags-1.5.ebuild:
-  Version bump.
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  08 Nov 2010; Krzysztof Pawlik <nelchael@gentoo.org> metadata.xml:
-  Improve metadata: add no-herd and my name.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-*gflags-1.4 (08 Nov 2010)
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  08 Nov 2010; Krzysztof Pawlik <nelchael@gentoo.org> +gflags-1.4.ebuild,
-  metadata.xml:
-  Version bump, Python library has been split off to separate package:
-  dev-python/python-gflags.
+  Bug: https://bugs.gentoo.org/552720
 
-  09 Jul 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
-  Update metadata.xml. antarus is staffer now (#119161)
+  01 Sep 2015; Tobias Klausmann <klausman@gentoo.org> gflags-2.1.1-r1.ebuild,
+  gflags-2.1.2.ebuild, gflags-9999.ebuild:
+  Fixing HOMEPAGE move due to code.google.com shutdown
 
-  29 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  gflags-1.2.ebuild:
-  Set SUPPORT_PYTHON_ABIS (bug #312131).
+  Package-Manager: portage-2.2.20.1
 
-*gflags-1.2 (14 Sep 2009)
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  14 Sep 2009; Tiziano Müller <dev-zero@gentoo.org> +gflags-1.2.ebuild:
-  Version bump.
-
-*gflags-1.1 (30 Apr 2009)
-
-  30 Apr 2009; Tiziano Müller <dev-zero@gentoo.org> gflags-0.8.ebuild,
-  +gflags-1.1.ebuild:
-  Version bump (including eapi-2 and python conditional-depend fix).
-
-*gflags-0.8 (16 Jun 2008)
-
-  16 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> +gflags-0.8.ebuild:
-  Version bump (bug #218802, fixes bug #227473)
-
-  10 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
-  distutils fix from dev-zero
-
-  09 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
-  remove mirror://, it was wrong anyway
-
-  09 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
-  Thanks to leio for pointing out I'm retarded and didn't specify an SRC_URI
-
-*gflags-0.7 (09 Mar 2008)
-
-  09 Mar 2008; Alec Warner <antarus@gentoo.org> +metadata.xml,
-  +gflags-0.7.ebuild:
-  -m Initial import of gflags
