--- a/dev-libs/gobject-introspection-common/ChangeLog
+++ b/dev-libs/gobject-introspection-common/ChangeLog
@@ -1,205 +1,177 @@
 # ChangeLog for dev-libs/gobject-introspection-common
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gobject-introspection-common/ChangeLog,v 1.45 2014/08/07 18:05:24 jer Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  07 Aug 2014; Jeroen Roovers <jer@gentoo.org>
-  gobject-introspection-common-1.40.0.ebuild:
-  Stable for HPPA (bug #512012).
+*gobject-introspection-common-1.44.0 (09 Aug 2015)
+*gobject-introspection-common-1.42.0 (09 Aug 2015)
+*gobject-introspection-common-1.40.0 (09 Aug 2015)
+*gobject-introspection-common-1.38.0 (09 Aug 2015)
 
-  01 Aug 2014;  <tgall@gentoo.org> gobject-introspection-common-1.38.0.ebuild,
-  gobject-introspection-common-1.40.0.ebuild:
-  arm64, initial support
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +gobject-introspection-common-1.38.0.ebuild,
+  +gobject-introspection-common-1.40.0.ebuild,
+  +gobject-introspection-common-1.42.0.ebuild,
+  +gobject-introspection-common-1.44.0.ebuild, +metadata.xml:
+  proj/gentoo: Initial commit
 
-  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.40.0.ebuild:
-  Stable for ppc, wrt bug #512012
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.40.0.ebuild:
-  Stable for x86, wrt bug #512012
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.40.0.ebuild:
-  Stable for amd64, wrt bug #512912
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-*gobject-introspection-common-1.40.0 (27 Apr 2014)
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org>
-  +gobject-introspection-common-1.40.0.ebuild:
-  Version bump for Gnome 3.12.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  25 Apr 2014; Pacho Ramos <pacho@gentoo.org>
-  -gobject-introspection-common-1.32.1.ebuild,
-  -gobject-introspection-common-1.34.2.ebuild,
-  -gobject-introspection-common-1.36.0.ebuild:
-  drop old
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  21 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Stable for arm, wrt bug #507568
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Stable for sparc, wrt bug #507568
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org>
+  gobject-introspection-common-1.38.0.ebuild,
+  gobject-introspection-common-1.40.0.ebuild,
+  gobject-introspection-common-1.42.0.ebuild,
+  gobject-introspection-common-1.44.0.ebuild:
+  Use https by default
 
-  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Stable for alpha, wrt bug #507568
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Stable for ia64, wrt bug #507568
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Stable for ppc64, wrt bug #507568
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org>
+  gobject-introspection-common-1.38.0.ebuild,
+  gobject-introspection-common-1.40.0.ebuild,
+  gobject-introspection-common-1.42.0.ebuild,
+  gobject-introspection-common-1.44.0.ebuild:
+  Convert URIs for gnome.org and kde.org to https
 
-  14 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Stable for ppc, wrt bug #507568
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  28 Mar 2014; Jeroen Roovers <jer@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Stable for HPPA (bug #499954).
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  09 Mar 2014; Pacho Ramos <pacho@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  x86 stable, bug 499954
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  09 Mar 2014; Pacho Ramos <pacho@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  amd64 stable, bug 499954
+  Bug: https://bugs.gentoo.org/552720
 
-  22 Feb 2014; Pacho Ramos <pacho@gentoo.org>
-  gobject-introspection-common-1.38.0.ebuild:
-  Fix wrong commit, bug 502160
+  07 Sep 2015; Mikle Kolyada <zlogene@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  amd64 stable wrt bug #551826
 
-  22 Feb 2014; Akinori Hattori <hattya@gentoo.org>
-  gobject-introspection-common-1.36.0.ebuild:
-  ia64 stable wrt bug #494132
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
 
-*gobject-introspection-common-1.38.0 (23 Dec 2013)
+  12 Sep 2015; Agostino Sarubbo <ago@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  x86 stable wrt bug #551826
 
-  23 Dec 2013; Gilles Dartiguelongue <eva@gentoo.org>
-  +gobject-introspection-common-1.38.0.ebuild:
-  Version bump for Gnome 3.10.
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
 
-  22 Dec 2013; Jeroen Roovers <jer@gentoo.org>
-  gobject-introspection-common-1.36.0.ebuild:
-  Stable for HPPA (bug #478252).
+  16 Sep 2015; Tobias Klausmann <klausman@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  add alpha keyword
 
-  08 Dec 2013; Pacho Ramos <pacho@gentoo.org>
-  gobject-introspection-common-1.36.0.ebuild:
-  x86 stable, bug #478252
+  Gentoo-Bug: 551826
 
-  30 Nov 2013; Pacho Ramos <pacho@gentoo.org>
-  gobject-introspection-common-1.36.0.ebuild:
-  amd64 stable, bug #478252
+  Package-Manager: portage-2.2.20.1
 
-  14 Nov 2013; Matt Turner <mattst88@gentoo.org>
-  gobject-introspection-common-1.34.2.ebuild:
-  alpha stable, bug 476364.
+  20 Sep 2015; Jeroen Roovers <jer@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  Stable for HPPA (bug #551826).
 
-  24 Oct 2013; Jeroen Roovers <jer@gentoo.org>
-  gobject-introspection-common-1.34.2.ebuild:
-  Stable for HPPA (bug #476364).
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
 
-  23 Oct 2013; Samuli Suominen <ssuominen@gentoo.org>
-  gobject-introspection-common-1.36.0.ebuild:
-  Use ${PV} in the gobject-introspection blocker to be future proof (since
-  mixing might work only out of fluke)
+  28 Sep 2015; Jeroen Roovers <jer@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  Stable for PPC64 (bug #551826).
 
-  20 Oct 2013; Samuli Suominen <ssuominen@gentoo.org>
-  gobject-introspection-common-1.36.0.ebuild:
-  Update the dev-libs/gobject-introspection blocker from 1.32.0 to 1.36.0 in
-  attempt of preventing issues like
-  http://forums.gentoo.org/viewtopic-p-7421930.html
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
 
-  17 Oct 2013; Markus Meier <maekke@gentoo.org>
-  gobject-introspection-common-1.34.2.ebuild:
-  arm stable, bug #476364
+  03 Oct 2015; Markus Meier <maekke@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  arm stable, bug #551826
 
-*gobject-introspection-common-1.36.0 (28 Mar 2013)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="arm"
 
-  28 Mar 2013; Pacho Ramos <pacho@gentoo.org>
-  +gobject-introspection-common-1.36.0.ebuild:
-  Version bump for Gnome 3.8
+  18 Oct 2015; Mikle Kolyada <zlogene@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  sparc stable wrt bug #551826
 
-  18 Feb 2013; Zac Medico <zmedico@gentoo.org>
-  gobject-introspection-common-1.34.2.ebuild:
-  Add ~arm-linux keyword.
+  Package-Manager: portage-2.2.20.1
 
-  09 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild,
-  -gobject-introspection-common-1.34.0.ebuild,
-  -gobject-introspection-common-1.34.1.1.ebuild,
-  gobject-introspection-common-1.34.2.ebuild:
-  Change license to HPND as recommended at
-  http://article.gmane.org/gmane.linux.gentoo.devel/80427; drop old.
+  12 Nov 2015; Agostino Sarubbo <ago@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  ppc stable wrt bug #565086
 
-*gobject-introspection-common-1.34.2 (21 Nov 2012)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc"
 
-  21 Nov 2012; Gilles Dartiguelongue <eva@gentoo.org>
-  +gobject-introspection-common-1.34.2.ebuild:
-  Version bump.
+*gobject-introspection-common-1.46.0 (14 Nov 2015)
 
-*gobject-introspection-common-1.34.1.1 (30 Oct 2012)
+  14 Nov 2015; Pacho Ramos <pacho@gentoo.org>
+  +gobject-introspection-common-1.46.0.ebuild:
+  Version bump
 
-  30 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org>
-  +gobject-introspection-common-1.34.1.1.ebuild:
-  Version bump.
+  Package-Manager: portage-2.2.24
 
-  28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  ia64/s390/sh/sparc stable wrt #427544
+  14 Nov 2015; Pacho Ramos <pacho@gentoo.org>
+  -gobject-introspection-common-1.38.0.ebuild,
+  -gobject-introspection-common-1.40.0.ebuild:
+  Drop old
 
-  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  stable ppc ppc64, bug #427544
+  Package-Manager: portage-2.2.24
 
-  06 Oct 2012; Markus Meier <maekke@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  arm stable, bug #427544
+  16 Nov 2015; Agostino Sarubbo <ago@gentoo.org>
+  gobject-introspection-common-1.44.0.ebuild:
+  ia64 stable wrt bug #565086
 
-  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  Stable for amd64, wrt bug #427544
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
 
-  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  x86 stable wrt bug #427544
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-  02 Oct 2012; Jeroen Roovers <jer@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  Stable for HPPA (bug #427544).
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  26 Sep 2012; Matt Turner <mattst88@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  Stable on alpha, bug 427544.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-*gobject-introspection-common-1.34.0 (25 Sep 2012)
+  21 Feb 2016; Pacho Ramos <pacho@gentoo.org>
+  gobject-introspection-common-1.46.0.ebuild:
+  amd64 stable, bug 566378
 
-  25 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  -gobject-introspection-common-1.32.0.ebuild,
-  +gobject-introspection-common-1.34.0.ebuild:
-  Version bump, drop old.
+  Package-Manager: portage-2.2.27
+  RepoMan-Options: --include-arches="amd64"
 
-  26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
-  gobject-introspection-common-1.32.1.ebuild:
-  keyword ~amd64-fbsd
-
-*gobject-introspection-common-1.32.1 (20 Apr 2012)
-
-  20 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  +gobject-introspection-common-1.32.1.ebuild:
-  Version bump.
-
-  13 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  gobject-introspection-common-1.32.0.ebuild:
-  Make DESCRIPTION more descriptive; thanks to ralda for reporting.
-
-*gobject-introspection-common-1.32.0 (28 Mar 2012)
-
-  28 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  +gobject-introspection-common-1.32.0.ebuild, +metadata.xml:
-  Autoconf and make macros split out of gobject-introspection for bug #367143.
