--- a/metadata/md5-cache/dev-libs/libassuan-2.4.2
+++ b/metadata/md5-cache/dev-libs/libassuan-2.4.2
@@ -4,10 +4,10 @@ DESCRIPTION=IPC library used by GnuPG and GPGME
 EAPI=5
 HOMEPAGE=http://www.gnupg.org/related_software/libassuan/index.en.html
 IUSE=static-libs
-KEYWORDS=alpha amd64 arm ~arm64 hppa ia64 ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-3 LGPL-2.1
 RDEPEND=>=dev-libs/libgpg-error-1.8
 SLOT=0
-SRC_URI=mirror://gnupg/libassuan/libassuan-2.2.1.tar.bz2
+SRC_URI=mirror://gnupg/libassuan/libassuan-2.4.2.tar.bz2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
-_md5_=417c312fe1398092a0d35a6501bd5ee5
+_md5_=aedcea08c73c113dd8fe4d11f75bc14d
