--- a/metadata/md5-cache/dev-libs/libburn-1.4.2
+++ b/metadata/md5-cache/dev-libs/libburn-1.4.2
@@ -4,10 +4,10 @@ DESCRIPTION=Open-source library for reading, mastering and writing optical discs
 EAPI=5
 HOMEPAGE=http://libburnia-project.org
 IUSE=cdio debug static-libs track-src-odirect
-KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 sparc x86
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=cdio? ( >=dev-libs/libcdio-0.83 )
 SLOT=0
-SRC_URI=http://files.libburnia-project.org/releases/libburn-1.3.8.tar.gz
+SRC_URI=http://files.libburnia-project.org/releases/libburn-1.4.2.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
-_md5_=6073a0abf3ab6a4358b7d8e4000a44fe
+_md5_=4f2bae35a7195e0f6c5454d79523c4d8
