--- a/metadata/md5-cache/dev-libs/libpthread-stubs-0.3
+++ b/metadata/md5-cache/dev-libs/libpthread-stubs-0.3
@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install postinst postrm prepare test unpack
 DEPEND=!<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.14.1:1.14 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 x86-interix? ( >=sys-devel/libtool-2.2.6a sys-devel/m4 >=x11-misc/util-macros-1.18 >=media-fonts/font-util-1.2.0 ) ppc-aix? ( >=sys-devel/libtool-2.2.6a sys-devel/m4 >=x11-misc/util-macros-1.18 >=media-fonts/font-util-1.2.0 ) x86-winnt? ( >=sys-devel/libtool-2.2.6a sys-devel/m4 >=x11-misc/util-macros-1.18 >=media-fonts/font-util-1.2.0 ) virtual/pkgconfig
 DESCRIPTION=Pthread functions stubs for platforms missing them
-EAPI=3
+EAPI=4
 HOMEPAGE=http://xorg.freedesktop.org/
 IUSE=static-libs
-KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=MIT
 SLOT=0
-SRC_URI=http://xcb.freedesktop.org/dist/libpthread-stubs-0.1.tar.bz2
+SRC_URI=http://xcb.freedesktop.org/dist/libpthread-stubs-0.3.tar.bz2
 _eclasses_=autotools	199350adb9ae3c85e275b1409e43c90d	autotools-utils	419811142edf3516b0d0cf1a254d93cb	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85	xorg-2	b41f09eee8d441f780b7413dba7e120b
-_md5_=e439c06e3f71fb2d3b5616b2ea0af290
+_md5_=4097177fcb609bfafcef440c81888703
