--- a/metadata/md5-cache/dev-python/enum34-1.1.2
+++ b/metadata/md5-cache/dev-python/enum34-1.1.2
@@ -4,11 +4,11 @@ DESCRIPTION=Python 3.4 Enum backported
 EAPI=5
 HOMEPAGE=https://pypi.python.org/pypi/enum34
 IUSE=doc python_targets_pypy python_targets_pypy3 python_targets_python2_7 python_targets_python3_3
-KEYWORDS=alpha amd64 arm ~arm64 hppa ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh sparc x86 ~amd64-linux ~x86-linux ~x86-macos
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux ~x86-macos
 LICENSE=BSD
 RDEPEND=python_targets_pypy? ( virtual/pypy:0= ) python_targets_pypy3? ( virtual/pypy3:0= ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) >=dev-lang/python-exec-2:=[python_targets_pypy(-)?,python_targets_pypy3(-)?,python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python2_7(-),-python_single_target_python3_3(-)]
 REQUIRED_USE=|| ( python_targets_pypy python_targets_pypy3 python_targets_python2_7 python_targets_python3_3 )
 SLOT=0
-SRC_URI=mirror://pypi/e/enum34/enum34-1.0.4.tar.gz
+SRC_URI=mirror://pypi/e/enum34/enum34-1.1.2.tar.gz
 _eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	62927b3db3a589b0806255f3a002d5d3	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	0f6937650a475d673baa5d0c8c0b37b3	python-utils-r1	2e6826f6a93ad2acf904eecf5b5fb6d2	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
-_md5_=05a29b371206591bf6eda12a99a227fe
+_md5_=7fa9dd40b7813e8bcdbe70f30694229c
